gcc/testsuite/rust/rustc/ui/const-generics/invalid-constant-in-args.rs
fn main() {
    let _: Vec<&str, "a"> = Vec::new(); // { dg-error ".E0107." "" { target *-*-* } }
}

